Nijie Downloader 1.0.7.2
- Bug Fix: Fix Issue #31

Nijie Downloader 1.0.7.0
- Feature: Update member parser to parse image count.
- Feature: Update search parser to parse image count.
- Bug Fix: Update web client to handle url ended with period.
- Bug Fix: Update https handler.
- Bug Fix: Update batch job runner.
- Add test case for parsers.

Nijie Downloader 1.0.6.1
- Feature: Add Member's doujin mode.
- Feature: Add Member's bookmarks mode.
- Enhancement: Add new filenameformat {bookmarkedMemberId} and {bookmarkedMemberName}, only applicable in Member Bookmarks mode.
- Bug Fix: Fix Issue ##21, continue to next image if encounter http error 404/403 for member and tags batch download.

Nijie Downloader 1.0.5.0
- Feature: Add My Bookmarked Members and My Bookmarked Images (Request #19).
- Feature: Add retry count option.
- Enhancement: Refactor download code in library.

Nijie Downloader 1.0.4.0
- Feature: Add option to skip image if already downloaded in DB.
- Feature: Add option for the starting page.
- Enhancement: Save manga information to DB.
- Enhancement: Refactor ViewModel and MainWindow.
- Enhancement: Show error list on Batch Job.
- Bug Fix: Update filesize detection.
- Bug Fix: Fix Issue #16, status update in job.
- Bug Fix: Fix Issue #11, Datetime value.

Nijie Downloader 1.0.3.0
- Feature: Add Trace DB to log setting.
- Feature: Add Job Completion notification dialog.
- Feature: Implement Edit Batch Job item.
- Feature: Add download member avatar for Download by member in setting.
- Feature: Add separate file name format for manga and avatar.
- Feature: Add option to enable network compression.
- Feature: Add option to overwrite only different size (Additional overhead if compression enabled).
- Feature: Add option to backup old file.
- Feature: Add option to enable saving image info to DB.
- Feature: Add option to change log level.
- Enhancement: Add DB lock when inserting.
- Enhancement: Move Add Job as dialog window.