@@ -79,6 +79,9 @@
       <setting name="DumpDownloadedImagesToTextFile" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="FormatListCount" serializeAs="String">
+        <value>8</value>
+      </setting>
     </NijieDownloader.UI.Properties.Settings>
     <Nandaka.Common.Properties.Settings>
       <setting name="Timeout" serializeAs="String">
